--- a/index.html
+++ b/index.html
@@ -39,22 +39,26 @@
     </header>
     <section id="gallery" class="gallery">
         <ul class="gallery-visible d-flex">
-            <li id="landscapes">
+            <li>
+                <a href="#landscapes"></a>
                 <div class="gallery-visible__img"></div>
                 <h2>Gallery Landscapes</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </li>
-            <li id="people">
+            <li>
+                <a href="#people"></a>
                 <div class="gallery-visible__img"></div>
                 <h2>Gallery People</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </li>
-            <li id="architecture">
+            <li>
+                <a href="#architecture"></a>
                 <div class="gallery-visible__img"></div>
                 <h2>Gallery Architecture</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </li>
-            <li id="travel">
+            <li>
+                <a href="#travel"></a>
                 <div class="gallery-visible__img"></div>
                 <h2>Gallery Travel</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -67,16 +71,16 @@
             </div>
         </ul>
         <ul class="gallery-desc d-flex">
-                <li id="landscapesDesc">
+                <li id="landscapes">
                     <div class="gallery-desc__img"></div>
                     <h2>Gallery Landscapes</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </li>
-                <li id="peopleDesc">
+                <li id="people">
                     <div class="gallery-desc__img"></div>
                     <h2>Gallery People</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <div id="card" class="gallery-desc__card">
+                    <div class="gallery-desc__card">
                             <div class="cards">
                                 <div class="cards-1">
                                     Front
@@ -103,16 +107,16 @@
                             </div>
                         </div>
                 </li>
-                <li id="architectureDesc">
+                <li id="architecture">
                     <div class="gallery-desc__img"></div>
                     <h2>Gallery Architecture</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </li>
-                <li id="travelDesc">
+                <li id="travel">
                     <div class="gallery-desc__img"></div>
                     <h2>Gallery Travel</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <div id="card" class="gallery-desc__card">
+                    <div class="gallery-desc__card">
                         <div class="cards">
                             <div class="cards-1">
                                 Front
